--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -27,6 +27,9 @@ jobs:
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
+          - python_version: '3.10'
+            pytorch_version: '1.10.1'
+
           - platform: 'macos-latest'
 
 
