--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,9 @@ jobs:
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
+          - python_version: '3.10'
+            pytorch_version: '1.10.1'
+
           - pytorch_version: '1.9.1'
             jit_status: 'jit_enabled'
 
