--- a/.github/workflows/reduced_notebook.yml
+++ b/.github/workflows/reduced_notebook.yml
@@ -29,6 +29,9 @@ jobs:
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
+          - python_version: '3.10'
+            pytorch_version: '1.10.1'
+
           - platform: 'macos-latest'
 
 
