--- a/.github/workflows/reduced_ort_integration.yml
+++ b/.github/workflows/reduced_ort_integration.yml
@@ -29,6 +29,9 @@ jobs:
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
+          - python_version: '3.10'
+            pytorch_version: '1.10.1'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
