--- a/requirements/requirements-llm.txt
+++ b/requirements/requirements-llm.txt
@@ -1,3 +1,3 @@
-optimum-amd[brevitas] @ git+https://github.com/huggingface/optimum-amd.git@main
+# optimum-amd[brevitas] @ git+https://github.com/huggingface/optimum-amd.git@main
 tqdm
 transformers
